--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "version": "1.0.0",
   "description": "An enriched oEmbed API for the major media platforms.",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "build": "esbuild --bundle --sourcemap --outdir=dist ./src/index.js",
     "dev": "miniflare --watch --debug",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run build && ava --verbose test/*.spec.js",
     "format": "prettier --write '**/*.{js,css,json,md}'"
   },
-  "author": "Wesley Luyten <hi@wesleyluyten.com>",
+  "author": "Wesley Luyten <me@wesleyluyten.com>",
   "license": "MIT",
   "devDependencies": {
-    "esbuild": "^0.12.16",
-    "eslint": "^7.29.0",
-    "miniflare": "^1.2.0",
-    "prettier": "^2.3.1"
+    "ava": "^3.15.0",
+    "esbuild": "^0.12.17",
+    "eslint": "^7.31.0",
+    "miniflare": "^1.3.3",
+    "prettier": "^2.3.2"
   },
   "dependencies": {
     "iso8601-duration": "^1.3.0"
