--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "esbuild": "^0.12.17",
     "eslint": "^7.31.0",
     "miniflare": "^1.3.3",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "iso8601-duration": "^1.3.0"
