--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "iso8601-duration": "^1.3.0"
+    "iso8601-duration": "1.3.0",
+    "playerx": "0.8.2"
   }
 }
