--- a/package.json
+++ b/package.json
@@ -3,26 +3,24 @@
   "name": "playerx-oembed",
   "version": "1.0.0",
   "description": "An enriched oEmbed API for the major media platforms.",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "build": "esbuild --bundle --sourcemap --outdir=dist ./src/index.js",
-    "dev": "miniflare --watch --debug",
     "test": "npm run build && ava --verbose test/*.spec.js",
-    "format": "prettier --write '**/*.{js,css,json,md}'"
+    "build": "esbuild --bundle --sourcemap --outdir=dist ./src/index.js",
+    "dev": "npx wrangler dev --log-level debug"
   },
   "author": "Wesley Luyten <me@wesleyluyten.com>",
   "license": "MIT",
   "devDependencies": {
-    "ava": "^3.15.0",
-    "esbuild": "^0.13.7",
-    "eslint": "^8.0.1",
-    "miniflare": "^1.4.1",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "ava": "^5.3.1",
+    "eslint": "^8.54.0",
+    "miniflare": "^3.20231030.0",
+    "typescript": "^5.2.2",
+    "wrangler": "^3.16.0"
   },
   "dependencies": {
-    "iso8601-duration": "1.3.0",
-    "playerx": "0.8.4"
+    "iso8601-duration": "2.1.1",
+    "playerx": "~1.0.4"
   }
 }
